src/objects/GroupCertification__c.object
<CustomObject>
    <description>A list of all Certifications required for this Group.</description>
    <fields>
        <fullName>Certification__c</fullName>
        <description>The Certification</description>
        <label>Certification</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>GroupCertifications</relationshipLabel>
        <relationshipName>GroupCertifications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GroupCertDupCheck__c</fullName>
        <label>GroupCertDupCheck</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>The Group</description>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>GroupCertifications</relationshipLabel>
        <relationshipName>GroupCertifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>GroupCertification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Group__c</columns>
        <columns>Certification__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GROUPCERT-{0000}</displayFormat>
        <label>GroupCertification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GroupCertifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>